# lvgl_xml_simulator

./: CMakeLists.txt  lv_conf.h  lv_drv_conf.h  main.c
SDL2/SDL_image-SDL2/include/: SDL_image.h
lv_drivers/sdl/: sdl_common.c
lvgl/src/font/: lv_font.h
lvgl/src/misc/: lv_fs.c
src/: lvgl_main.cpp  lvgl_main.h
src/font/: font.cpp  font.h
src/font/lv_font_misans_10/: lv_font_misans_12.cpp
src/font/lv_font_misans_12/: lv_font_misans_12.cpp
src/font/lv_font_misans_14/: lv_font_misans_14.cpp
src/lib/forest/: forest.cpp  forest.h  tree.cpp  tree.h  tree_data.cpp  tree_data.h
src/lib/link_list/: link_list.cpp  link_list.h
src/lib/tinyxml/: readme.md  tinyxml2_convert.cpp  tinyxml2_convert.h
src/page/graphic_element/: graphic_element.cpp  graphic_element.h
src/page/lvgl_chat_animation/: LvChatAnimation.cpp  LvChatAnimation.h
src/page/lvgl_text_animation/: lvgl_text_animation.cpp  lvgl_text_animation.h
src/page/page_home/: page_home.c  page_home.h
src/page/page_home/xml/: activity_home.xml  activity_home2.xml  page.xml
src/page/page_setting/xml/: activity_setting.xml
src/page/page_xml_create/: extract_padding.cpp  extract_padding.h  xml_page_create.cpp  xml_page_create.h
src/page/page_xml_create/components/: base_factory.h  button_factory.h  img_factory.h  label_factory.h  screen_factory.h
src/page/page_xml_create/flie_load/: flie_load.cpp  flie_load.h
src/page/page_xml_create/image_loader/: image_factory.cpp  image_factory.h  image_loader.cpp  image_loader.h  image_loader_test.cpp  image_resource.cpp  image_resource.h  image_source.cpp  image_source.h  image_type.cpp  image_type.h
src/page/page_xml_create/image_loader/image_loager_manager/: bmp_image_loader.cpp  bmp_image_loader.h  gif_image_loader.cpp  gif_image_loader.h  jpg_image_loader.cpp  jpg_image_loader.h  png_image_loader.cpp  png_image_loader.h
src/page/page_xml_create/image_loader/load_source/file_loader/: file_image_source.cpp  file_image_source.h
src/page/page_xml_create/style/: style_manager.h
src/page/page_xml_create/xml/: ui_layout.xml
src/page/page_xml_create/xml_button/: xml_button_create.cpp  xml_button_create.h
src/page/page_xml_create/xml_img/: xml_img_create.cpp  xml_img_create.h
src/page/page_xml_create/xml_label/: xml_label_create.cpp  xml_label_create.h
src/page/page_xml_create/xml_obj/: xml_obj_create.cpp  xml_obj_create.h
src/page/page_xml_create/xml_parser/: xml_parser.cpp  xml_parser.h
src/page_manager/: font_manager.cpp  font_manager.h  page_manager.c  page_manager.h
src/pikaPackage/: CMakeLists.txt  Math.pyi  main.py  requestment.txt  run_tool.py
src/pikaPackage/pikascript-api/: Math.h  Math_Adder.h  Math_Multiplier.h  __asset_pikaModules_py_a.c  __pikaBinding.c  pikaScript.c  pika_lvgl.h  pika_lvgl_lv_obj.h
src/pikaPackage/pikascript-core/: PikaObj.h
src/pikaPackage/pikascript-lib/Math/: Math_Adder.c  Math_Multipler.c
src/pikaPackage/pikascript-lib/pika_lvgl/: pika_lv_wegit.c  pika_lvgl.c  pika_lvgl_lv_obj.c
src/pika_python/: pikaPython.cpp  pikaPython.h
src/res/res_tool/: read_img.cpp  read_img.h  read_jpg.cpp  read_jpg.h  res_tool.cpp  res_tool.h
(+2 files in other folders)
